# parallelBFS

./: README.md  draw.ipynb
bagbfs/: CMakeLists.txt  bag.cpp  bag.h  graph.cpp  graph.h  main.cpp  pennant.cpp  pennant.h
out-final/: com-orkut.out  rmat1.out  rmat1_4.out  rmat2.out  rmat2_4.out  rmat3.out  rmat3_4.out  roadNet-CA.out  soc-LiveJournal1.out  web-Stanford.out
pbfs/: CMakeLists.txt  bitmap.h  csrgraph.h  main.cpp  sliding_q.h  timer.h
